Update and rename 2022-03-05-Basic Analysis of data from nycflights13.md to 2022-03-05-second.md

--- a/_posts/2022-03-05-second.md
+++ b/_posts/2022-03-05-second.md
@@ -1,7 +1,10 @@
-
+---
+layout: single
+title: "Basic Analysis of Data using R"
+---
 ================
 
-Today, I will be doing basic analysis of data using R.
+Today, I will be doing basic analysis of data using R with nycflights13 data.
 
 First, load the following libraries and data.
 
